--- a/vm/ctrlvm/centos7/vagrant/vagrantfile
+++ b/vm/ctrlvm/centos7/vagrant/vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-config.vm.box = "bento/ubuntu-18.04"
+config.vm.box = "generic/centos7"
 
 
 
@@ -10,7 +10,7 @@ vb.name = "centos7"
 end
 
 
-
+config.vm.provision :shell, :path => "install.sh"
 config.vm.network "private_network", ip: "192.168.33.53"
 config.vm.hostname = "centos7"
 
