--- a/vm/ctrlvm/ubuntu2/vagrant/vagrantfile
+++ b/vm/ctrlvm/ubuntu2/vagrant/vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-config.vm.box = "bento/ubuntu-18.04"
+config.vm.box = "bento/ubuntu-20.10"
 
 
 
@@ -10,7 +10,7 @@ vb.name = "ubuntu2"
 end
 
 
-
+config.vm.provision :shell, :path => "install.sh"
 config.vm.network "private_network", ip: "192.168.33.52"
 config.vm.hostname = "ubuntu2"
 
