--- a/vm/master/vagrant/vagrantfile
+++ b/vm/master/vagrant/vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-config.vm.box = "bento/ubuntu-18.04"
+config.vm.box = "ubuntu/bionic64"
 
 
 
@@ -10,7 +10,8 @@ vb.name = "master"
 end
 
 
-
+config.vm.provision :shell, :path => "install_gradle.sh"
+config.vm.provision :shell, :path => "install.sh"
 config.vm.network "private_network", ip: "192.168.33.50"
 config.vm.hostname = "master"
 
