--- a/src_dockerfile/Dockerfile
+++ b/src_dockerfile/Dockerfile
@@ -1,4 +1,8 @@
-FROM alpine:3.12
-
-RUN apk add --update git
-RUN apk add curl
+FROM python:3.7-alpine
+WORKDIR /web
+RUN apk add --no-cache gcc musl-dev linux-headers
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+COPY . .
+EXPOSE 5000
+CMD ["python", "main.py"]
