--- a/src_ansible/roles/container/tasks/main.yml
+++ b/src_ansible/roles/container/tasks/main.yml
@@ -14,11 +14,13 @@
   - { name: docker-py, version: 1.10.6 }
 
 - name: Creates directory ~/hashapp
+  become: no
   file:
     path: ~/hashapp
     state: directory
 
 - name: Download du dockerfile et requirement.txt
+  become: no
   get_url:
     url: "{{item.url1}}"
     dest: "{{item.dest1}}"
@@ -28,6 +30,7 @@
     - { url1: "https://github.com/gb-0001/j9-tp/raw/master/src_microsvc/main.py" , dest1: "~/hashapp/main.py" }
 
 - name: build image
+  become: no
   tags: build_image
   docker_image:
     path: ~/hashapp
@@ -35,6 +38,7 @@
     state: present
 
 - name: start image
+  become: no
   tags: start_image
   docker_container:
     name: "{{item.name}}"
