--- a/src_ansible/roles/hashsvccli/tasks/main.yml
+++ b/src_ansible/roles/hashsvccli/tasks/main.yml
@@ -31,6 +31,7 @@
     state: enabled
 
 - name: copie des sources dans /var/www/html
+  become: no
   copy:
     src: "{{item.pathsrc}}"
     dest: "{{item.pathdst}}"
